# physics-4th-qrt

./: .gitignore  Outline.org  flake.nix  video.cabal
nix/: hix.nix
src/: DoubleSplit.hs  ElectroMagnetic.hs  Environment.hs  Formula.hs  FormulaSolving.hs  Interference.hs  Intro.hs  Lasers.hs  LightAmplification.hs  Main.hs  Util.hs  Wave.hs  WaveAddition.hs
