cabal-version: 3.6
-- Instructions on how to write this file are in the Cabal
-- documentation, which can be found here:
--   http://haskell.org/cabal/release/cabal-latest/doc/users-guide/

name: video
version: 1.0.0.2
license: BSD-3-Clause
license-file: LICENSE
copyright: (c) Simon Marlow
author: Simon Marlow
maintainer: Simon Marlow <marlowsd@gmail.com>
bug-reports: mailto:marlowsd@gmail.com
stability: stable

executable video
  hs-source-dirs: src
  main-is: Main.hs

  ghc-options: -O2
  
  other-modules:
    Intro
    Environment
    Wave
    Util
    Interference
    Formula
    FormulaSolving
    Lasers
    DoubleSplit
    ElectroMagnetic
    LightAmplification
    WaveAddition

  build-depends:    base ^>=4.15.1.0
                    , text ^>= 1.2.5.0
                    , reanimate ^>= 1.1.6.0
                    , reanimate-svg ^>= 0.13
                    , linear ^>= 1.21
                    , raw-strings-qq
                    , JuicyPixels ^>= 3.3.7
                    , lens ^>=5.1
                    , split ^>=0.2.3.5
                    , directory ^>= 1.3.7.1
                    , template-haskell ^>=2.17.0.0
                    , Interpolation ^>=0.3.0
                    , random-shuffle ^>=0.0.4
                    , random ^>=1.2.1.1
                    , neat-interpolation ^>= 0.5.1.3
